# diorama

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  meson.build  spec.md
.github/workflows/: ci.yml  release.yml
build-aux/: cargo-build.sh  cargo-sources.json  diorama-glycin-heif  diorama-glycin-heif.conf  io.github.mendrik.Diorama.Devel.json
data/: io.github.mendrik.Diorama.desktop.in  io.github.mendrik.Diorama.gschema.xml  io.github.mendrik.Diorama.metainfo.xml.in  meson.build
src/: application.rs  error.rs  lib.rs  main.rs  settings.rs
src/ai/: mod.rs
src/canvas/: mod.rs
src/compare/: mapping.rs  mod.rs
src/document/: history.rs  mod.rs  model.rs  operation.rs
src/export/: atomic_write.rs  jpeg.rs  mod.rs  png.rs
src/image/: loader.rs  metadata.rs  mod.rs
src/navigation/: directory.rs  mod.rs
src/tools/: crop.rs  mod.rs  palette.rs  pencil.rs  scale.rs  selection.rs
src/window/: mod.rs
tests/: formats.rs
